Enhance server load balancing and message processing